salesforce_sfdx/main/default/objects/OSFMX_SignQuote__c/OSFMX_SignQuote__c.object-meta.xml
<CustomObject>
    <label>Firma de la oferta</label>
    <nameField>
        <label>Nombre de Firmas de la oferta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Firmas de la oferta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>