salesforce_sfdx/main/default/objects/OSFMX_SignQuote__c/fields/OSFMX_Quote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Quote__c</fullName>
    <label>Oferta</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Firmas de la oferta</relationshipLabel>
    <relationshipName>OSFMX_SignatureQuote</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>