salesforce_sfdx/main/default/objects/OSFMX_SignQuote__c/fields/OSFMX_SignatureImage__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SignatureImage__c</fullName>
    <formula>IMAGE(OSFMX_SignatureImageId__c, "ImagenFirma", 150, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen de la firma</label>
    <type>Text</type>
</CustomField>