salesforce_sfdx/main/default/objects/OSFMX_SignQuote__c/fields/OSFMX_SignatureImageId__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SignatureImageId__c</fullName>
    <label>ID Imagen de la firma</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>