salesforce_sfdx/main/default/objects/OSFMX_SignQuote__c/fields/OSFMX_UserId__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OSFMX_SignatureQuote</relationshipName>
    <type>Lookup</type>
</CustomField>